done: Fix overflow on carousel area by make overflow-y on carousel-item to hidden, Adjust carousel caption to be positioned better on slides

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -251,6 +251,10 @@ h1{
     } */
   }
 
+  .latest-news-title{
+    height: 30px;
+  }
+
   .news-items-carousel{
     width: 100vw;
     height: 400px;
@@ -263,12 +267,8 @@ h1{
     overflow-y: hidden;
   }
 
-  .carousel-inner{
-    width: 100vw;
-  }
-
   .carousel-item{
-    width: 100vw;
+    overflow-y: hidden;
   }
 
   .carousel-indicators{
@@ -287,8 +287,7 @@ h1{
     background-color: transparent !important;
     right: 10% !important;
     left: 10%;
-    bottom: -30px;
-    height: 150px;
+    bottom: -45px;
   }
 
   .carousel-control-prev, .carousel-control-next{
